<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    style="@style/header"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.dhaffaf.jeddahguide.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            app:tabMode="scrollable"
            style="@style/main_header">

            <android.support.design.widget.TabItem
                android:id="@+id/bestactivitesTab"
                style="@style/main_header"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/restaurants"
                style="@style/main_header"
                android:text="@string/tab_text_1" />

            <android.support.design.widget.TabItem
                android:id="@+id/shopsTab"
                style="@style/main_header"
                android:text="@string/tab_text_4" />

            <android.support.design.widget.TabItem
                android:id="@+id/hotelsTab"
                style="@style/main_header"
                android:text="@string/tab_text_3" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        style="@style/header"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


</LinearLayout>
